<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:textSize="@dimen/heading1"
            android:hint="@string/registration" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_username_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:imeOptions="actionNext"
            android:hint="@string/username_hint" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_password_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:hint="@string/password_hint"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_reenter_password_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:hint="@string/repeat_password_hint"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_email_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:hint="@string/email_hint"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_fio_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:imeOptions="actionDone"
            android:imeActionId="@+id/button_register"
            android:hint="@string/FIO_hint"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style = "@style/ColoredButtonStyle"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/registration"/>

    </LinearLayout>

</ScrollView>