<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/label_authorize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="@dimen/heading1"
            android:layout_marginTop="50dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:imeOptions="actionNext"
            android:layout_marginRight="30dp"
            android:hint="@string/username_hint"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:imeOptions="actionDone"
            android:imeActionId="@+id/button_login"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="25dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            style="@style/ColoredButtonStyle"
            android:text="@string/login_button_text"/>

    </LinearLayout>
</ScrollView>